--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,7 @@ header {
     background-color: #E6E6E6;
     overflow: hidden;
     position: relative;
+    max-width: 1000px;
 }
 .wrapper ul {
     max-width: 327px;
