--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body  {
     font-size: 1em;
     font-family: 'Scada', sans-serif;
 }
-
 body a {
     text-decoration: none;
     color: #e88605;
@@ -33,7 +32,6 @@ header {
     margin: 0 auto;
     overflow: hidden;
 }
-
 .main-nav {
     margin-left: 1em;
     float: right;
@@ -57,14 +55,17 @@ header {
  
 .wrapper {
     font-family: 'Metrophobic', sans-serif;
+    background: #F0F0E9;
     font-size: 0.9em;
     color: #e88605;
     width: 68%;
     margin: 2em auto;
-    background-color: #E6E6E6;
     overflow: hidden;
     position: relative;
     max-width: 1000px;
+}
+.wrapper img {
+    width: 100%;
 }
 .wrapper ul {
     max-width: 327px;
@@ -132,6 +133,13 @@ header {
 }
 .contact ul{
     margin-left: 500px;
+    display: inline;
+}
+#map {
+  margin-top: 2.5em;
+  width: 100%;
+  height: 415px;
+  float: left,
 }
 
 /*footer*/
@@ -142,17 +150,17 @@ footer {
     margin: 0 auto;
     overflow: hidden;
 }
-
 .contact {
-    text-transform: uppercase;
     margin-top: 0.5em;
-    width: 
+}
+.contact li {
+    list-style: none;
 }
 .networks{
     float: right;
 }
 .networks li {
-    display: inline-block;
+    display: inline;
     float: right;
 }
 .networks a {
